# AICodingTeam

./: .gitignore  .ignore  AGENTS.md  DESIGN.md  PI_DATA_MAPPING_MANUAL_ACCEPTANCE.md  README.md  init.md  pyproject.toml
document-to-skill-engineering-package/: AGENTS.md  Makefile  README.md  pyproject.toml
document-to-skill-engineering-package/docs/: 00_PRD.md  01_ARCHITECTURE.md  02_TECH_SPEC.md  03_IMPLEMENTATION_PLAN.md  04_OPENCLAW_ADAPTER.md  05_OPENSOURCE_REFERENCES.md
document-to-skill-engineering-package/examples/: expected_outputs.md  market_insight_input.example.yaml
document-to-skill-engineering-package/skills/market_insight/: SKILL.md  data_requirements.yaml  eval_rules.yaml  evidence_schema.yaml  skill.yaml  tool_bindings.yaml  workflow.dag.yaml
document-to-skill-engineering-package/skills/market_insight/output_schemas/: category_market_analysis_table.json  hot_product_gene_table.json  keyword_demand_breakdown_table.json  product_opportunity_score_table.json  review_qa_painpoint_table.json  (+1 more)
document-to-skill-engineering-package/specs/: DATA_ASSET_CARD_SPEC.md  DATA_REQUIREMENT_DSL.md  EVAL_SPEC.md  EVIDENCE_PACK_SPEC.md  SKILL_SPEC.md  STRATEGY_IR_SPEC.md  TOOL_CONTRACT_SPEC.md
document-to-skill-engineering-package/src/doc_to_skill/: cli.py  compiler.py  evals.py  evidence.py  parser.py  runtime.py  schemas.py  tool_registry.py  tool_resolver.py
document-to-skill-engineering-package/tests/: test_compiler.py  test_evals.py  test_parser.py  test_tool_resolver.py
document-to-skill-engineering-package/tools/: tool_registry.yaml
(+391 files in other folders)
